Added Instansi Method and API
