# routes/api.php
@@ -39,3 +39,4 @@ Route::prefix('/master')->group(function() {
 
 Route::apiResource('/surat-masuk-manual', 'SuratMasuk\SuratMasukManualController');
 Route::apiResource('/penerima-surat', 'SuratMasuk\SuratMasukManualController');
+Route::apiResource('/instansi', 'InstansiController');
